test/files/neg/stmt-expr-discard.scala
class A {
  def f = 1
    + 2
    - 4
}
